Finished Section 9 Lecture 143 Fixing Flex Gap EvenThough it is support it at the moment

--- a/starter/09-Omnifood-Optimizations/css/general.css
+++ b/starter/09-Omnifood-Optimizations/css/general.css
@@ -70,6 +70,10 @@ html {
   /* Percentage of user's browser font-size setting */
   font-size: 62.5%;
   overflow-x: hidden;
+
+  /* now its support from microsoft edge and even safari for iphones  */
+  /* as the time of 25-5-2022 */
+  scroll-behavior: smooth;
 }
 
 body {
